# visualization.wavforhue

./: .gitignore  API  CMakeLists.txt  FindOpenGLES2.cmake  Makefile  README  package.mk
cmake_addons_text_files/: visualization.wavforhue.txt
debian/: control  copyright
depends/: Makefile  cmake_install.cmake
src/: DefaultPixelShader.hlsl  DefaultPixelShader.inc  DefaultVertexShader.hlsl  DefaultVertexShader.inc  Main.cpp  Main.h  Main_gles.cpp  Main_gles.h  VisGUIShader.cpp  VisGUIShader.h  VisMatrixGLES.cpp  VisMatrixGLES.h  VisShader.cpp  VisShader.h  WavforHue.cpp  WavforHue.h  WavforHue_Kodi.cpp  WavforHue_Kodi.h  WavforHue_Settings.hpp  WavforHue_Thread.cpp  WavforHue_Thread.h  fft.cpp  fft.h  wavforhue.cpp  wavforhue.h  wavforhue_thread.cpp  wavforhue_thread.h
src/json/: FFT.cpp  WavforHue.cpp
visualization.wavforhue/: LICENSE.txt  addon.xml  addon.xml.in  changelog.txt  config.py  default.py
visualization.wavforhue/resources/: settings.xml
visualization.wavforhue/resources/language/English/: strings.po
visualization.wavforhue/resources/language/English (US)/: strings.po.save
visualization.wavforhue/resources/lib/: mediainfofromlog.pyo  settings.py  settings.pyo  tools.py  tools.pyo
